--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,7 @@ build/
 /app/compiler/vc14win64/x64/TestVHACD/release/TestVHACD.vcxproj.FileListAbsolute.txt
 /app/compiler/vc14win64/x64/TestVHACD/release/wavefront.obj
 /app/decomp.obj
+/app/*.obj
 /app/compiler/vc14win64/.vs/TestVHACD/v16/Browse.VC.db-shm
 /app/compiler/vc14win64/.vs/TestVHACD/v16/Browse.VC.db-wal
 /app/compiler/vc14win64/.vs/TestVHACD/v16/Browse.VC.opendb
@@ -190,4 +191,8 @@ build/
 /app/compiler/vc14win64/.vs/TestVHACD/v16/ipch/AutoPCH/ea55e35d3718268a
 /app/x64/Debug/ZERO_CHECK
 /app/x64/Release/ZERO_CHECK
+/app/builds/
+/app/builds-em/
 /*.bak
+node_modules/
+builds/
